(library
 (name rfc8032)
 (public_name rfc8032)
 (libraries cstruct hex nocrypto)
 (modules rfc8032 curve)
)
(library
 (name field25519)
 (public_name field25519)
 (libraries cstruct zarith)
 (modules field25519)
 (foreign_stubs 
  (language c) 
  (names f25519 f25519_stubs) 
  (flags :standard -Wall -Wextra -pedantic --std=c99))
)
