(test
  (name test_rfc)
  (libraries rfc8032 oUnit)
  (modules test_rfc)
)
(test
  (name test_serde)
  (libraries rfc8032 oUnit fmt)
  (modules  test_serde)
)
(test
  (name test_params)
  (libraries rfc8032 oUnit fmt)
  (modules  test_params)
)
(test
  (name test_dsa)
  (libraries rfc8032 oUnit fmt)
  (modules  test_dsa)
)
